--- a/css/swarm.css
+++ b/css/swarm.css
@@ -1,6 +1,7 @@
 
 body{
 	font:16px 'Open Sans', sans-serif;
+	margin:0;
 }
 
 ul {
@@ -16,9 +17,6 @@ header {
 	margin-left:10%;
 }	
 
-main, footer {
-	margin-left:5%;
-}
 
 p {
 	width:75%;
@@ -43,9 +41,10 @@ footer {
 #swarmatron {
 	text-align:center;
 	width:90%;
-	max-width:1000px;
+	max-width:950px;
 	margin-top:50px;
 	display:none;
+	margin:auto;
 }
 
 html.webaudio #swarmatron {
@@ -63,7 +62,6 @@ html.webaudio #swarmatron {
       #8aa 99.9%, #333 0.1%
     );
 	width:95%;
-	/*height:250px;*/
 	padding:20px;
 	border-top: 10px #999 ridge;
 	border-left: 10px #999 ridge;
@@ -108,28 +106,34 @@ html.webaudio #swarmatron {
 	margin:auto;
 	clear:both;
 	margin-top:20px;
+	transition:margin-top 0.5s;
 }
 
 .mainknobrow li {
 	float:left;
 	margin:10px 40px;
+	transition:margin 0.5s;
 }
 
 .mainswitchrow li {
 	float:left;
 	margin:10px 15px;
+	transition:margin 0.5s;
 }	
 
 .mainswitchrow li.knob, .mainswitchrow li.toggleswitch {
 	margin-top:15px;
+	transition:margin-top 0.5s;
 }
 
 .mainswitchrow li.knob {
 	margin-right:50px;
+	transition:margin-right 0.5s;
 }
 
 .mainswitchrow li.toggleswitch {
 	margin-left:50px;
+	transition:margin-left 0.5s;
 }
 
 #ribbon1, #ribbon2{
@@ -146,6 +150,7 @@ html.webaudio #swarmatron {
 	margin-top:30px;
 	border:1px #588 solid;
 	border-radius:5px;
+	transition: margin-top 0.5s;
 }
 
 #ribbon1:active, #ribbon2:active {
@@ -162,6 +167,7 @@ html.webaudio #swarmatron {
 	margin-bottom:10px;
 	border:1px #588 solid;
 	border-radius:5px;
+	transition: margin-top 0.5s, margin-bottom 0.5s;
 }
 
 .knob {
@@ -222,6 +228,7 @@ html.webaudio #swarmatron {
 	margin-top:30px;
 	margin-bottom:10px;
 	padding-top:5px;
+	transition:margin-top 0.5s;
 }
 
 .toggleswitch .top {
@@ -340,7 +347,7 @@ html.webaudio #swarmatron {
 	}
  }
 
- @media (max-width: 915px) {
+ @media (max-width: 840px) {
   	#mainpanel {
   		padding-bottom:0;
   	}
@@ -393,7 +400,7 @@ html.webaudio #swarmatron {
 	}
  }
 
- @media (max-width: 760px) {
+ @media (max-width: 690px) {
  	.mainswitchrow li.knob {
 		margin-right:10px;
 	}
