--- a/css/swarm.css
+++ b/css/swarm.css
@@ -2,6 +2,7 @@
 body{
 	font:16px 'Open Sans', sans-serif;
 	margin:0;
+	padding:0;
 }
 
 ul {
@@ -61,7 +62,6 @@ html.webaudio #swarmatron {
       to right, 
       #8aa 99.9%, #333 0.1%
     );
-	width:95%;
 	padding:20px;
 	border-top: 10px #999 ridge;
 	border-left: 10px #999 ridge;
@@ -79,7 +79,6 @@ html.webaudio #swarmatron {
       to right, 
       #8aa 99.9%, #333 0.1%
     );
-	width:95%;
 	padding:20px;
 	border-bottom: 10px #999 ridge;
 	border-left: 10px #999 ridge;
